# TokenGauge

./: .env.example  .gitignore  Dockerfile.fullstack  README.md  cloudbuild.yaml  demo.py  demo_colab.py  docker-compose.yml  package-lock.json  render.yaml
.agents/workflows/: push-context.md
.claude/: settings.local.json
backend/: Dockerfile  alerts.py  auth.py  classifier.py  database 2.py  database.py  entrypoint.sh  kms.py  main.py  models 2.py  models.py  redis_client.py  requirements.txt  schemas 2.py  schemas.py  seed.py  seed_demo.py
backend/middleware/: rate_limit.py
backend/routers/: auth.py  dashboard.py  keys.py  proxy.py  usage.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_health.py  test_proxy.py  test_results.md  test_results_usage.md  test_results_usage.txt  test_sdk_token.py  test_sms_alerts.py  test_usage.py
context/: .gitignore
context/.agents/: agents.md
context/.memory/: memory.md
context/.prompts/: prompts.md
context/architecture/: api.md  architecture.md
frontend/: Dockerfile  index 2.html  index.html  nginx.conf  package 2.json  package-lock 2.json  package-lock.json  package.json  vite.config 2.ts  vite.config.ts
redis/: cache.py  client.py  rate_limiter.py  worker.py
sdk/: pyproject.toml  tokenwatch.py
tokenwatch-sdk/: README.md  pyproject.toml
tokenwatch-sdk/examples/: anthropic_example.py  openai_example.py
tokenwatch-sdk/tests/: test_classifier.py
tokenwatch-sdk/tokengauge/: __init__.py  _tracker.py
tokenwatch-sdk/tokengauge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+12 files in other folders)
