[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tokenwatch-sdk"
version = "0.1.0"
description = "Zero-config AI usage tracking — wrap any OpenAI/Anthropic client and log to your TokenWatch dashboard"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.20"]
all        = ["openai>=1.0", "anthropic>=0.20"]

[tool.setuptools]
py-modules = ["tokenwatch"]
